# qtPicColor

./: .gitignore  BUILD.md  README.md  build_local.py  get_version.py  pyproject.toml  产品设计文档.md  技术实现文档.md
.github/workflows/: build.yml  test-build.yml
src/qtpiccolor/: __init__.py  __main__.py  main.py
src/qtpiccolor/core/: color_analyzer.py  history_manager.py  models.py
src/qtpiccolor/resources/: icon.icns
src/qtpiccolor/ui/: __init__.py  canvas_widget.py  color_list.py  history_widget.py  image_canvas.py  main_window.py  upload_widget.py
src/qtpiccolor/utils/: clipboard.py  file_handler.py
